--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 DOMAIN=http://localhost
-DB_CLUSTER=dreamershop
-DB_USER=dreamershop
-DB_PASS=dreamershop62783
-URI=mongodb+srv://dreamershop:dreamershop62783@dreamershop.v9lqm.mongodb.net/?retryWrites=true&w=majority&appName=dreamershop
+DB_CLUSTER=
+DB_USER=
+DB_PASS=
+URI=
 PORT=3200
