Updated URI in env

--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,5 @@ DOMAIN=http://localhost
 DB_CLUSTER=
 DB_USER=
 DB_PASS=
-URI=
+URI=mongodb+srv://dreamershop:masud1234@dreamershop.v9lqm.mongodb.net/?retryWrites=true&w=majority&appName=dreamershop
 PORT=3200
